name:                pure-contexts
version:             0.7.0.0
synopsis:
homepage:            github.com/grumply/pure-ctl
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base,
    pure-elm

  hs-source-dirs: src

  exposed-modules:
    Pure.Control.Cont,
    Pure.Control.Except,
    Pure.Control.Reader,
    Pure.Control.State,
    Pure.Control.Writer

  default-extensions:
    RankNTypes
    ConstraintKinds
    ImplicitParams
    RecordWildCards

  default-language: Haskell2010