name:                pure-contexts
version:             0.8.0.0
homepage:            purehs.org/doc/pure-contexts
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-contexts.git

library
  build-depends:
    base,
    pure-elm

  hs-source-dirs: src

  exposed-modules:
    Pure.Control.Cont,
    Pure.Control.Except,
    Pure.Control.Reader,
    Pure.Control.State,
    Pure.Control.Writer

  default-extensions:
    RankNTypes
    ConstraintKinds
    ImplicitParams
    RecordWildCards
    FlexibleContexts

  default-language: Haskell2010
